--- a/our_land/templates/settings_js.html
+++ b/our_land/templates/settings_js.html
@@ -2,5 +2,7 @@
 
 {% block settings_javascript %}
 {{ block.super }}
-var MAPIT = {{ WAZIMAP.mapit|jsonify|safe }};
+WAZIMAP_COUNTRY_CODE = '{{ HURUMAP.country_code }}';
+GOOGLE_GEOCODE_API_KEY = '{{ HURUMAP.google_geocode_api_key }}';
+var MAPIT = {{ HURUMAP.mapit|jsonify|safe }};
 {% endblock settings_javascript %}
