--- a/our_land/templates/about.html
+++ b/our_land/templates/about.html
@@ -7,11 +7,7 @@
         <h1>About {{ HURUMAP.name }}</h1>
         <p><em>What’s the data behind the story?</em></p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod \
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, \
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\
-          Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. </p>
+        <p>{{ HURUMAP.name }} provides useful facts about land ownership in South Africa. Compare places using tables and maps, download data, and embed charts on your site!</p>
         {% include 'blocks/about/manifesto.html' %}
     </div>
 {% endblock %}
