--- a/our_land/templates/_footer.html
+++ b/our_land/templates/_footer.html
@@ -9,7 +9,7 @@
 <div class="column-half text-center">
     <p>A project by:</p>
     {% block footer_branding %}
-    <a href="https://facebook.com/CodeForAfrica/" target="_blank" rel="noopener">
+    <a href="https://codeforafrica.org/" target="_blank" rel="noopener">
         <img src="{% static 'img/logos/cfafrica-white.png' %}" alt="Code for Africa" style="margin-top: 0;"></a>
     {% endblock %}
 </div>
