--- a/our_land/templates/profile/profile_detail.html
+++ b/our_land/templates/profile/profile_detail.html
@@ -16,6 +16,8 @@
               <span>Erven & Urban Land</span></a></li>
             <li><a href="#sectional-title-land"><i class="fa fa-user"></i>
               <span>Sectional Title Land</span></a></li>
+              <li><a href="#redistribution-restitution"><i class="fa fa-user"></i>
+                <span>Land Redistribution and Restitution</span></a></li>
           </ul>
         </div>
       </nav>
@@ -24,8 +26,26 @@
 {% block profile_header_population %}
 {% endblock %}
 
+
+
 {% block profile_header_tail %}
+<!-- <div class="column-full">
+    <strong> Year {{ primary_releases.active.year }}</strong>
+    {% if primary_releases.other %}
+    <div class="tool-group toggle-sub-group release-list">
+        <a>Change release<i class="fa fa-chevron-circle-down"></i></a>
+        <ul class="sub-group" style="display: none;">
+        {% for release in primary_releases.other %}
+            <li><a href="{{ request.path }}?release={{release.year}}"> Other year {{ release.year }}</a></li>
+        {% endfor %}
+        </ul>
+    </div>
+    {% endif %}
+</div> -->
 {% endblock %}
+
+
+
 
 {% block profile_detail %}
 {% if not farmland.is_missing %}
@@ -138,6 +158,20 @@
           </div>
           <div class="column-half">
             <div id="chart-histogram-sectionaltitleland-number_of_sectional_title_owners_by_nationality" data-stat-type="number" data-chart-title="Number of Individual Sectional Title Owners per Nationality"></div>
+          </div>
+      </section>
+    </div>
+  </article>
+{% endif %}
+{% if not redistributionandrestitution.is_missing %}
+  <article id="redistribution-restitution" class="clearfix">
+    <header class="section-contents">
+        <h1>Land Redistribution and Restitution</h1>
+    </header>
+    <div class="section-container">
+      <section class="clearfix stat-row">
+          <div class="column-half">
+              <div id="chart-column-redistributionandrestitution-projects_households_beneficiaries_landcost" data-chart-title="Number of Projects, Households and Beneficiearies"></div>
           </div>
       </section>
     </div>
