--- a/our_land/templates/profile/profile_detail.html
+++ b/our_land/templates/profile/profile_detail.html
@@ -1,5 +1,19 @@
 {% extends 'profile/profile_detail.html' %} {% load humanize lookup staticfiles %}
 
+{% block header_menu %}
+  <li><a href="/about">About</a></li>
+  <li><a href="/blog">Blog</a></li>
+  <li><a href="/#showcase">Showcase</a></li>
+  <li><a href="https://facebook.com/HacksHackersAfrica"
+         target="_blank" rel="noopener">Community</a></li>
+  <li class="social-icons">
+    <a href="https://twitter.com/{{ HURUMAP.twitter }}"><i
+        class="fa fa-twitter fa-lg fa-fw"></i></a>
+    <a href="https://facebook.com/{{ HURUMAP.facebook }}"><i
+        class="fa fa-facebook fa-lg fa-fw"></i></a>
+  </li>
+{% endblock header_menu %}
+
 {% block secondary_nav %}
     <div class="floating-nav-wrapper" id="sticky-nav">
       <nav class="floating-nav affix-top" data-spy="affix" data-offset-top="197">
@@ -171,7 +185,7 @@
     <div class="section-container">
       <section class="clearfix stat-row">
           <div class="column-half">
-              <div id="chart-column-redistributionandrestitution-projects_households_beneficiaries_landcost" data-chart-title="Number of Projects, Households and Beneficiearies"></div>
+              <div id="chart-pie-redistributionandrestitution-redistributedlandusebreakdown" data-chart-title="Number of Projects, Households and Beneficiearies for Redistributed Land"></div>
           </div>
       </section>
     </div>
