--- a/our_land/templates/profile/profile_detail.html
+++ b/our_land/templates/profile/profile_detail.html
@@ -78,7 +78,7 @@
         </section>
         <section class="clearfix stat-row">
             <div class="column-half">
-                <div id="chart-pie-farmland-land_ownership_in_hectares_by_race" data-stat-type="percentage" data-chart-title="Individual Land Ownership in Hectares by Race" data-initial-sort="-value"></div>
+                <div id="chart-pie-farmland-land_ownership_in_hectares_by_race" data-stat-type="percentage" data-chart-title="Individual Land Ownership percent Hectares by Race" data-initial-sort="-value"></div>
             </div>
             <div class="column-half">
               <div id="chart-pie-farmland-number_of_land_owners_per_race" data-stat-type="percentage" data-chart-title="Number of Individual Land Owners per Race" data-initial-sort="-value"></div>
@@ -86,7 +86,7 @@
         </section>
         <section class="clearfix stat-row">
             <div class="column-half">
-                <div id="chart-histogram-farmland-land_ownership_in_hectares_by_gender" data-stat-type="scaled-percentage" data-chart-title="Individual Land Ownership in Hectares by Gender"></div>
+                <div id="chart-histogram-farmland-land_ownership_in_hectares_by_gender" data-stat-type="scaled-percentage" data-chart-title="Individual Land Ownership percent Hectares by Gender"></div>
             </div>
             <div class="column-half">
               <div id="chart-column-farmland-number_of_land_owners_per_gender" data-stat-type="number" data-chart-title="Number of Individual Land Owners per Gender"></div>
@@ -94,7 +94,7 @@
         </section>
         <section class="clearfix stat-row">
             <div class="column-half">
-                <div id="chart-pie-farmland-land_ownership_in_hectares_by_nationality" data-stat-type="scaled-percentage" data-chart-title="Individual Land Ownership in Hectares by Nationality" data-initial-sort="-value"></div>
+                <div id="chart-pie-farmland-land_ownership_in_hectares_by_nationality" data-stat-type="scaled-percentage" data-chart-title="Individual Land Ownership percent Hectares by Nationality" data-initial-sort="-value"></div>
             </div>
             <div class="column-half">
               <div id="chart-histogram-farmland-number_of_land_owners_per_nationality" data-stat-type="number" data-chart-title="Number of Individual Land Owners per Nationality"></div>
@@ -111,7 +111,7 @@
       <div class="section-container">
         <section class="clearfix stat-row">
             <div class="column-half">
-                <div id="chart-histogram-ervenland-erven_land_ownership_in_hectares_by_race" data-stat-type="scaled-percentage" data-chart-title="Individual Erven Land Ownership in Hectares by Race"></div>
+                <div id="chart-histogram-ervenland-erven_land_ownership_in_hectares_by_race" data-stat-type="scaled-percentage" data-chart-title="Individual Erven Land Ownership percent Hectares by Race"></div>
             </div>
             <div class="column-half">
               <div id="chart-pie-ervenland-number_of_erven_land_owners_per_race" data-stat-type="percentage" data-chart-title="Number of Individual Erven Land Owners per Race" data-initial-sort="-value"></div>
@@ -119,7 +119,7 @@
         </section>
         <section class="clearfix stat-row">
             <div class="column-half">
-                <div id="chart-pie-ervenland-erven_land_ownership_in_hectares_by_gender" data-stat-type="scaled-percentage" data-chart-title="Individual Erven Land Ownership in Hectares by Gender" data-initial-sort="-value"></div>
+                <div id="chart-pie-ervenland-erven_land_ownership_in_hectares_by_gender" data-stat-type="scaled-percentage" data-chart-title="Individual Erven Land Ownership percent Hectares by Gender" data-initial-sort="-value"></div>
             </div>
             <div class="column-half">
               <div id="chart-pie-ervenland-number_of_erven_land_owners_per_gender" data-stat-type="percentage" data-chart-title="Number of Individual Erven Land Owners per Gender" data-initial-sort="-value"></div>
@@ -127,7 +127,7 @@
         </section>
         <section class="clearfix stat-row">
             <div class="column-half">
-                <div id="chart-histogram-ervenland-erven_land_ownership_in_hectares_by_nationality" data-stat-type="scaled-percentage" data-chart-title="Individual Erven Land Ownership in Hectares by Nationality"></div>
+                <div id="chart-histogram-ervenland-erven_land_ownership_in_hectares_by_nationality" data-stat-type="scaled-percentage" data-chart-title="Individual Erven Land Ownership percent Hectares by Nationality"></div>
             </div>
             <div class="column-half">
               <div id="chart-column-ervenland-number_of_erven_land_owners_per_nationality" data-stat-type="number" data-chart-title="Number of Individual Erven Land Owners per Nationality"></div>
@@ -144,7 +144,7 @@
     <div class="section-container">
       <section class="clearfix stat-row">
           <div class="column-half">
-              <div id="chart-histogram-sectionaltitleland-sectional_title_ownership_in_hectares_per_category" data-stat-type="scaled-percentage" data-chart-title="Individual Sectional Title Ownership in Hectares by Category"></div>
+              <div id="chart-histogram-sectionaltitleland-sectional_title_ownership_in_hectares_per_category" data-stat-type="scaled-percentage" data-chart-title="Individual Sectional Title Ownership percent Hectares by Category"></div>
           </div>
           <div class="column-half">
             <div id="chart-pie-sectionaltitleland-number_of_sectional_title_owners_by_category" data-stat-type="percentage" data-chart-title="Number of Individual Sectional Title Owners per Category" data-initial-sort="-value"></div>
@@ -152,7 +152,7 @@
       </section>
       <section class="clearfix stat-row">
           <div class="column-half">
-              <div id="chart-pie-sectionaltitleland-sectional_title_ownership_in_hectares_per_race" data-stat-type="scaled-percentage" data-chart-title="Individual Sectional Title Ownership in Hectares by Race" data-initial-sort="-value"></div>
+              <div id="chart-pie-sectionaltitleland-sectional_title_ownership_in_hectares_per_race" data-stat-type="scaled-percentage" data-chart-title="Individual Sectional Title Ownership percent Hectares by Race" data-initial-sort="-value"></div>
           </div>
           <div class="column-half">
             <div id="chart-pie-sectionaltitleland-number_of_sectional_title_owners_by_race" data-stat-type="percentage" data-chart-title="Number of Individual Sectional Title Owners per Race" data-initial-sort="-value"></div>
@@ -160,7 +160,7 @@
       </section>
       <section class="clearfix stat-row">
           <div class="column-half">
-              <div id="chart-histogram-sectionaltitleland-sectional_title_ownership_in_hectares_per_gender" data-stat-type="scaled-percentage" data-chart-title="Individual Sectional Title Ownership in Hectares by Gender"></div>
+              <div id="chart-histogram-sectionaltitleland-sectional_title_ownership_in_hectares_per_gender" data-stat-type="scaled-percentage" data-chart-title="Individual Sectional Title Ownership percent Hectares by Gender"></div>
           </div>
           <div class="column-half">
             <div id="chart-column-sectionaltitleland-number_of_sectional_title_owners_by_gender" data-stat-type="number" data-chart-title="Number of Individual Sectional Title Owners per Gender"></div>
@@ -168,7 +168,7 @@
       </section>
       <section class="clearfix stat-row">
           <div class="column-half">
-              <div id="chart-pie-sectionaltitleland-sectional_title_ownership_in_hectares_per_nationality" data-stat-type="scaled-percentage" data-chart-title="Individual Sectional Title Ownership in Hectares by Nationality" data-initial-sort="-value"></div>
+              <div id="chart-pie-sectionaltitleland-sectional_title_ownership_in_hectares_per_nationality" data-stat-type="scaled-percentage" data-chart-title="Individual Sectional Title Ownership percent Hectares by Nationality" data-initial-sort="-value"></div>
           </div>
           <div class="column-half">
             <div id="chart-histogram-sectionaltitleland-number_of_sectional_title_owners_by_nationality" data-stat-type="number" data-chart-title="Number of Individual Sectional Title Owners per Nationality"></div>
@@ -185,7 +185,7 @@
     <div class="section-container">
       <section class="clearfix stat-row">
           <div class="column-half">
-              <div id="chart-pie-redistributionandrestitution-redistributedlandusebreakdown" data-chart-title="Number of Projects, Households and Beneficiearies for Redistributed Land"></div>
+              <div id="chart-column-redistributionandrestitution-redistributedlandusebreakdown" data-chart-title="Number of Projects, Households and Beneficiearies for Redistributed Land 2017/2018"></div>
           </div>
       </section>
     </div>
